<?xml version="1.0" encoding="utf-8"?>
<!--

    Wire
    Copyright (C) 2016 Wire Swiss GmbH

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources>
    <item name="cursor" type="id">666</item>
    <item name="cursor_menu_item_left_margin" type="id" />
    <item name="cursor_menu_item_participant" type="id" />
    <item name="cursor_menu_item_calling" type="id" />
    <item name="cursor_menu_item_video" type="id" />
    <item name="cursor_menu_item_camera" type="id" />
    <item name="cursor_menu_item_draw" type="id" />
    <item name="cursor_menu_item_ping" type="id" />
    <item name="cursor_menu_item_location" type="id" />
    <item name="cursor_menu_item_emoji" type="id" />
    <item name="cursor_menu_item_keyboard" type="id" />
    <item name="cursor_menu_item_file" type="id" />
    <item name="cursor_menu_item_gif" type="id" />
    <item name="cursor_menu_item_audio_message" type="id" />
    <item name="cursor_menu_item_more" type="id" />
    <item name="cursor_menu_item_less" type="id" />
    <item name="cursor_menu_item_dummy" type="id" />

    <item name="message_bottom_menu_item_forward" type="id" />
    <item name="message_bottom_menu_item_copy" type="id" />
    <item name="message_bottom_menu_item_delete_local" type="id" />
    <item name="message_bottom_menu_item_delete_global" type="id" />
    <item name="message_bottom_menu_item_edit" type="id" />
    <item name="message_bottom_menu_item_like" type="id" />
    <item name="message_bottom_menu_item_unlike" type="id" />
    <item name="message_bottom_menu_item_save" type="id" />
    <item name="message_bottom_menu_item_open_file" type="id" />

    <item name="video_calling_view" type="id" />

    <item name="emoji_keyboard_item" type="id" />
</resources>
