...
        android:textColor="@color/light_graphite"
        android:textSize="@dimen/wire__text_size__regular"
        style="?attr/iconButton"
        />

    <com.waz.zclient.ui.text.GlyphTextView
        android:id="@+id/gtv__edit_message__approve"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/drawing__button__padding"
        android:gravity="center"
        android:text="@string/glyph__check"
        android:textColor="@color/light_graphite"
        android:textSize="@dimen/wire__text_size__medium"
        style="?attr/iconButton"
        />

    <com.waz.zclient.ui.text.GlyphTextView
        android:id="@+id/gtv__edit_message__close"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical"
        android:padding="@dimen/drawing__button__padding"
        android:gravity="center"
        android:text="@string/glyph__close"
...
