...
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                />

            <!-- Edit Text -->
            <com.waz.zclient.ui.cursor.CursorEditText
                android:id="@+id/cet__cursor"
                style="?cursorEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/cursor_anchor2"
                android:layout_marginEnd="@dimen/cursor_anchor3"
...
                android:id="@+id/c__cursor__secondary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <com.waz.zclient.ui.cursor.EditMessageCursorToolbar
                android:id="@+id/emct__edit_message__toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />


        </com.waz.zclient.ui.cursor.CursorToolbarFrame>
...
