<?xml version="1.0" encoding="utf-8"?>
<!--

    Wire
    Copyright (C) 2016 Wire Swiss GmbH

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_collection"
        android:orderInCategory="50"
        android:title="@string/conversation_toolbar__call_video"
        android:icon="?attr/conversationToolbarCollection"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_audio_call"
        android:orderInCategory="100"
        android:title="@string/conversation_toolbar__call_audio"
        android:icon="?attr/conversationToolbarIconCall"
        app:showAsAction="always" />

</menu>
